--- a/application/index/view/public/footer.html
+++ b/application/index/view/public/footer.html
@@ -1,1 +1,5 @@
-<p>版权所有@test</p>
+	<nav class="navbar-default navbar-fixed-bottom text-center">
+				All images and contents &copy; tarena
+	</nav>
+</body>
+</html>
