--- a/application/index/view/public/header.html
+++ b/application/index/view/public/header.html
@@ -1,1 +1,11 @@
-<p>站点头部banner</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>insert</title>
+	<link rel="stylesheet" href="__STATIC__/css/bootstrap.min.css">
+	<style>
+		body{font-family:Microsoft Yahei,Helvetica Neue,Arial,Helvetica,sans-serif;}
+	</style>
+</head>
+<body class="container">
