--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Index</title>
+	<link >
 </head>
 <body>
-   {include file='public/header,public/menu'}
+   {include file='public/menu'}
 	index-index.html
    {include file="public/footer"}
 
