--- a/application/index/view/public/header.html
+++ b/application/index/view/public/header.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>insert</title>
+	<title>register</title>
 	<link rel="stylesheet" href="__STATIC__/css/bootstrap.min.css">
 	<style>
 		body{font-family:Microsoft Yahei,Helvetica Neue,Arial,Helvetica,sans-serif;}
