--- a/application/index/view/teacher/index.html
+++ b/application/index/view/teacher/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Index</title>
 	<link rel="stylesheet" href="__STATIC__/css/index.css">
 	<link rel="stylesheet" href="__STATIC__/css/bootstrap.min.css">
 </head>
-<body>
-    {include file='public/header,public/menu'}
+<body  class="container">
+    {include file='public/menu'}
 	<table class="table table-striped table-bordered">
 		<tr>
 			<th>序号</th>
