--- a/application/index/view/public/menu.html
+++ b/application/index/view/public/menu.html
@@ -1,1 +1,6 @@
 <p  class="text-warning">我是导航条</p>
+<ul class="nav nav-tabs">
+    <li role="presentation"><a href="{:url('add')}">注册</a></li>
+    <li role="presentation"><a href="{:url('teacher/index')}">信息显示</a></li>
+    <li role="presentation"><a href="#">Messages</a></li>
+</ul>
