--- a/application/index/view/public/header.html
+++ b/application/index/view/public/header.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>register</title>
+	<link rel="stylesheet" href="__STATIC__/css/index.css">
 	<link rel="stylesheet" href="__STATIC__/css/bootstrap.min.css">
 	<style>
 		body{font-family:Microsoft Yahei,Helvetica Neue,Arial,Helvetica,sans-serif;}
