--- a/application/index/view/teacher/index.html
+++ b/application/index/view/teacher/index.html
@@ -5,6 +5,7 @@
 	<title>Index</title>
 	<link rel="stylesheet" href="__STATIC__/css/index.css">
 	<link rel="stylesheet" href="__STATIC__/css/bootstrap.min.css">
+	<link rel="stylesheet" href="__STATIC__/css/font-awesome.min.css">
 </head>
 <body  class="container">
     {include file='public/menu'}
@@ -17,6 +18,7 @@
 			<th>邮箱</th>
 			<th>用户名</th>
 			<th>创建时间</th>
+			<th>删除</th>
 		</tr>
 	{volist name="teachers" id="vo" key="num"}
 		<tr>
@@ -29,13 +31,13 @@
 			{else/}
 			女
 			{/eq}
-
 			</td>
 			<td>{$vo.email}</td>
 			<td>{$vo.username}</td>
 			<td>{$vo.create_time}</td>
+			<td><a href="{:url('teacher/del')}"><i class="fa fa-times"></i></a></td>
 		</tr>
-	{/volist}	
+	{/volist}
 	</table>
 {$teachers->render()}
 {include file="public/footer"}
