--- a/application/index/view/teacher/index.html
+++ b/application/index/view/teacher/index.html
@@ -35,7 +35,7 @@
 			<td>{$vo.email}</td>
 			<td>{$vo.username}</td>
 			<td>{$vo.create_time}</td>
-			<td><a href="{:url('teacher/del')}"><i class="fa fa-times"></i></a></td>
+			<td><a href="{:url('teacher/del',['id'=>$vo.id])}"><i class="fa fa-times"></i></a></td>
 		</tr>
 	{/volist}
 	</table>
