--- a/application/index/view/public/menu.html
+++ b/application/index/view/public/menu.html
@@ -4,4 +4,6 @@
     <li role="presentation"><a href="{:url('teacher/index')}">老师信息</a></li>
     <li role="presentation"><a href="{:url('course/index')}">课程表信息</a></li>
     <li role="presentation"><a href="{:url('course/add')}">增加课程</a></li>
+    <li role="presentation"><a href="{:url('klass/index')}">班级信息</a></li>
+    <li role="presentation"><a href="{:url('klass/add')}">增加班级</a></li>
 </ul>
