--- a/application/index/view/public/menu.html
+++ b/application/index/view/public/menu.html
@@ -6,4 +6,6 @@
     <li role="presentation"><a href="{:url('course/add')}">增加课程</a></li>
     <li role="presentation"><a href="{:url('klass/index')}">班级信息</a></li>
     <li role="presentation"><a href="{:url('klass/add')}">增加班级</a></li>
+    <li role="presentation"><a href="{:url('student/index')}">学生信息</a></li>
+    <li role="presentation"><a href="{:url('student/add')}">新增学生</a></li>
 </ul>
