--- a/application/index/view/klass/add.html
+++ b/application/index/view/klass/add.html
@@ -8,6 +8,18 @@
     </div>
   </div>
   <div class="form-group">
+    <label for="inputEmail3" class="col-sm-2 control-label">辅导员</label>
+    <div class="col-sm-10">
+      <select class="form-control">
+        {volist name="teachers" id='vo'}
+          <option value="vo.id">{$vo.name}</option>
+        {/volist}
+      </select>
+    </div>
+    
+  </div>
+  
+  <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
       <button type="submit" class="btn btn-default">提交</button>
     </div>
