--- a/application/index/view/klass/index.html
+++ b/application/index/view/klass/index.html
@@ -4,14 +4,14 @@
     <tr>
       <td>id</td>
       <td>班级名</td>
-      <td>老师id</td>
+      <td>辅导员</td>
       <td>创建时间</td>
     </tr>
   {volist name="klass" id="vo"}
     <tr>
       <td>{$vo.id}</td>
       <td>{$vo.name}</td>
-      <td>{$vo.teacher_id}</td>
+      <td>{$vo.teacher.name}</td>
       <td>{$vo.create_time}</td>
     </tr>
   {/volist}
