--- a/application/index/view/student/index.html
+++ b/application/index/view/student/index.html
@@ -31,7 +31,7 @@
 			女
 			{/eq}
 		</td>
-		<td>{$vo.klass_id}</td>
+		<td>{$vo.klass.name}</td>
 		<td>{$vo.email}</td>
 		<td>{$vo.create_time}</td>
 	</tr>
