--- a/application/index/view/klass/add.html
+++ b/application/index/view/klass/add.html
@@ -10,9 +10,9 @@
   <div class="form-group">
     <label for="inputEmail3" class="col-sm-2 control-label">辅导员</label>
     <div class="col-sm-10">
-      <select class="form-control">
+      <select class="form-control" name="teacher_id">
         {volist name="teachers" id='vo'}
-          <option value="vo.id">{$vo.name}</option>
+          <option value="{$vo.id}">{$vo.name}</option>
         {/volist}
       </select>
     </div>
