--- a/application/index/view/student/add.html
+++ b/application/index/view/student/add.html
@@ -23,15 +23,20 @@
       </label>
       </div>
   <div class="form-group">
-    <label for="inputPassword3" class="col-sm-2 control-label">班级</label>
+    <label for="inputEmail3" class="col-sm-2 control-label">班级</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" name="klass_id" placeholder="班级">
+      <select class="form-control" name="klass_id">
+        {volist name="klass" id='vo'}
+          <option value="{$vo.id}">{$vo.name}</option>
+        {/volist}
+      </select>
     </div>
+    
   </div>
   <div class="form-group">
     <label for="inputPassword3" class="col-sm-2 control-label">邮箱</label>
     <div class="col-sm-10">
-      <input type="email" class="form-control" name="email" placeholder="邮箱">
+      <input type="text" class="form-control" name="email" placeholder="邮箱">
     </div>
   </div>
   <div class="form-group">
