--- a/application/index/view/public/header.html
+++ b/application/index/view/public/header.html
@@ -5,6 +5,7 @@
 	<title>register</title>
 	<link rel="stylesheet" href="__STATIC__/css/index.css">
 	<link rel="stylesheet" href="__STATIC__/css/bootstrap.min.css">
+	<link rel="stylesheet" href="__STATIC__/css/font-awesome.min.css">
 	<style>
 		body{font-family:Microsoft Yahei,Helvetica Neue,Arial,Helvetica,sans-serif;}
 	</style>
