--- a/application/index/view/course/index.html
+++ b/application/index/view/course/index.html
@@ -1,25 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-	<link rel="stylesheet" href="__STATIC__/css/bootstrap.min.css">
-</head>
-<body>
-	{include file="public/header" }
-	{include file="public/menu" }
-
-<table class="table table-striped table-bordered"  >
+{include file="public/header" }
+{include file="public/menu" }
+<table class="table table-striped table-bordered">
 	<tr>
 		<td>id</td>
 		<td>课程名</td>
 		<td>创建时间</td>
+		<td>删除</td>
 	</tr>
 {volist name="courses" id="vo"}
 	<tr>
 		<td>{$vo.id}</td>
 		<td>{$vo.name}</td>
 		<td>{$vo.create_time}</td>
+		<td><a href="{:url('course/del',['id'=>$vo.id])}"><i class="fa fa-times"></i></a></td>
 	</tr>
 {/volist}
 </table>
