--- a/application/index/view/teacher/index.html
+++ b/application/index/view/teacher/index.html
@@ -1,13 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Index</title>
-	<link rel="stylesheet" href="__STATIC__/css/index.css">
-	<link rel="stylesheet" href="__STATIC__/css/bootstrap.min.css">
-	<link rel="stylesheet" href="__STATIC__/css/font-awesome.min.css">
-</head>
-<body  class="container">
+    {include file='public/header'}
     {include file='public/menu'}
 	<table class="table table-striped table-bordered">
 		<tr>
