--- a/application/index/view/klass/index.html
+++ b/application/index/view/klass/index.html
@@ -6,6 +6,7 @@
       <td>班级名</td>
       <td>辅导员</td>
       <td>创建时间</td>
+      <td>删除</td>
     </tr>
   {volist name="klass" id="vo"}
     <tr>
@@ -13,6 +14,7 @@
       <td>{$vo.name}</td>
       <td>{$vo.teacher.name}</td>
       <td>{$vo.create_time}</td>
+      <td><a href="{:url('klass/del',['id'=>$vo.id])}"><i class="fa fa-times"></i></a></td>
     </tr>
   {/volist}
   </table>
