--- a/application/index/view/public/menu.html
+++ b/application/index/view/public/menu.html
@@ -1,8 +1,8 @@
 <p  class="text-warning">我是导航条</p>
 <ul class="nav nav-tabs">
-    <li role="presentation"><a href="{:url('teacher/add')}">新增老师</a></li>
-    <li role="presentation"><a href="{:url('teacher/index')}">老师信息</a></li>
-    <li role="presentation"><a href="{:url('course/index')}">课程表信息</a></li>
+    <li role="presentation"><a href="{:url('teacher/add')}">新增辅导员</a></li>
+    <li role="presentation"><a href="{:url('teacher/index')}">辅导员信息</a></li>
+    <li role="presentation"><a href="{:url('course/index')}">课程信息</a></li>
     <li role="presentation"><a href="{:url('course/add')}">增加课程</a></li>
     <li role="presentation"><a href="{:url('klass/index')}">班级信息</a></li>
     <li role="presentation"><a href="{:url('klass/add')}">增加班级</a></li>
