--- a/application/index/view/teacher/add.html
+++ b/application/index/view/teacher/add.html
@@ -30,7 +30,7 @@
 	  	<div class="form-group">
 	    	<label for="yzm">验证码</label><br>
 	    	<img src="{:captcha_src()}" class="img-responsive img-rounded" alt="captcha" onclick="this.src=this.src+'?'+Math.random()" style="margin-bottom: 10px;" />
-	    	<input type="password" name="vote" class="form-control" id="yzm" placeholder="验证码">
+	    	<input type="text" name="vote" class="form-control" id="yzm" placeholder="验证码">
 	  	</div>
 	  	<button type="submit" class="btn btn-info" class="btn btn-success">Submit</button>
 	</form>
