--- a/application/index/view/public/menu.html
+++ b/application/index/view/public/menu.html
@@ -8,4 +8,5 @@
     <li role="presentation"><a href="{:url('klass/add')}">增加班级</a></li>
     <li role="presentation"><a href="{:url('student/index')}">学生信息</a></li>
     <li role="presentation"><a href="{:url('student/add')}">新增学生</a></li>
+    <li role="presentation"><a href="{:url('klasscourse/index')}">班级课程关联信息</a></li>
 </ul>
