--- a/application/index/view/main.html
+++ b/application/index/view/main.html
@@ -213,6 +213,7 @@
 				<!--jumbotron添加巨幕区域-->
 				<div class="jumbotron">
 					<p class="small" style="font-size: 30px;">Main</p>
+					{block name="content"}{/block}
 				</div>
 			</div>
 			<!-- 右边end -->
