--- a/application/index/view/public/footer.html
+++ b/application/index/view/public/footer.html
@@ -4,6 +4,7 @@
 </body>
 </html>
 	<script src="__STATIC__/js/Jquery.js"></script>
+    <script type="text/javascript" src = "__STATIC__/js/bootstrap.min.js"></script>
 	<script>
         var pathname = window.location.pathname + window.location.search;
         $(".nav-tabs li a").each(function() {
