--- a/application/index/view/teacher/add.html
+++ b/application/index/view/teacher/add.html
@@ -1,4 +1,4 @@
-    {include file='public/header,public/menu'}
+    {include file='public/header'}
     <form action="{:url('teacher/save')}" method="post">
     	<div class="form-group">
 	    	<label for="username">用户名</label>
