--- a/application/index/view/course/index.html
+++ b/application/index/view/course/index.html
@@ -1,11 +1,10 @@
 {include file="public/header" }
-{include file="public/menu" }
 <table class="table table-striped table-bordered">
 	<tr>
-		<td>id</td>
-		<td>课程名</td>
-		<td>创建时间</td>
-		<td>删除</td>
+		<th>id</th>
+		<th>课程名</th>
+		<th>创建时间</th>
+		<th colspan="2">操作</th>
 	</tr>
 {volist name="courses" id="vo"}
 	<tr>
@@ -13,6 +12,7 @@
 		<td>{$vo.name}</td>
 		<td>{$vo.create_time}</td>
 		<td><a href="{:url('course/del',['id'=>$vo.id])}"><i class="fa fa-times"></i></a></td>
+		<td><a href="{:url('',['id'=>$vo.id])}"><i class="fa fa-pencil"></i></a></td>
 	</tr>
 {/volist}
 </table>
