--- a/application/index/view/klass/index.html
+++ b/application/index/view/klass/index.html
@@ -1,12 +1,11 @@
 {include file="public/header" }
-{include file="public/menu" }
   <table class="table table-striped table-bordered">
     <tr>
-      <td>id</td>
-      <td>班级名</td>
-      <td>辅导员</td>
-      <td>创建时间</td>
-      <td>删除</td>
+      <th>id</th>
+      <th>班级名</th>
+      <th>辅导员</th>
+      <th>创建时间</th>
+      <th colspan="2">操作</th>
     </tr>
   {volist name="klass" id="vo"}
     <tr>
@@ -15,6 +14,7 @@
       <td>{$vo.teacher.name}</td>
       <td>{$vo.create_time}</td>
       <td><a href="{:url('klass/del',['id'=>$vo.id])}"><i class="fa fa-times"></i></a></td>
+      <td><a href="{:url('',['id'=>$vo.id])}"><i class="fa fa-pencil"></i></a></td>
     </tr>
   {/volist}
   </table>
