--- a/application/index/view/public/header.html
+++ b/application/index/view/public/header.html
@@ -10,4 +10,81 @@
 		body{font-family:Microsoft Yahei,Helvetica Neue,Arial,Helvetica,sans-serif;}
 	</style>
 </head>
-<body class="container">
+<body class="container-fluid">
+<!-- 导航条 -->
+<nav class="navbar navbar-default" style="margin-top: 10px;">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Brand</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="{:url('index/index')}">首页 <span class="sr-only">(current)</span></a></li>
+
+
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">教师 <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="{:url('teacher/index')}">教师信息</a></li>
+            <li><a href="{:url('teacher/add')}">新增教师</a></li>
+          </ul>
+        </li>
+
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">课程 <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="{:url('course/index')}">课程信息</a></li>
+            <li><a href="{:url('course/add')}">新增课程</a></li>
+          </ul>
+        </li>
+        
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">班级 <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="{:url('klass/index')}">班级信息</a></li>
+            <li><a href="{:url('klass/add')}">新增班级</a></li>
+          </ul>
+        </li>
+
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">学生 <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="{:url('student/index')}">学生信息</a></li>
+            <li><a href="{:url('student/add')}">新增学生</a></li>
+          </ul>
+        </li>
+
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">选课 <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="{:url('klasscourse/index')}">选课信息</a></li>
+            <li><a href="{:url('klasscourse/add')}">选课</a></li>
+          </ul>
+        </li>
+
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
