--- a/application/index/view/student/index.html
+++ b/application/index/view/student/index.html
@@ -1,24 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-	<link rel="stylesheet" href="__STATIC__/css/bootstrap.min.css">
-</head>
-<body>
-	{include file="public/header" }
-	{include file="public/menu" }
+{include file="public/header" }
 
 <table class="table table-striped table-bordered">
 	<tr>
-		<td>id</td>
-		<td>名字</td>
-		<td>学号</td>
-		<td>性别</td>
-		<td>班级</td>
-		<td>邮箱</td>
-		<td>创建时间</td>
-		<td>删除</td>
+		<th>id</th>
+		<th>名字</th>
+		<th>学号</th>
+		<th>性别</th>
+		<th>班级</th>
+		<th>邮箱</th>
+		<th>创建时间</th>
+		<th colspan="2">操作</th>
+		
 	</tr>
 {volist name="students" id="vo"}
 	<tr>
@@ -36,6 +28,7 @@
 		<td>{$vo.email}</td>
 		<td>{$vo.create_time}</td>
 		<td><a href="{:url('student/del',['id'=>$vo.id])}"><i class="fa fa-times"></i></a></td>
+		<td><a href="{:url('',['id'=>$vo.id])}"><i class="fa fa-pencil"></i></a></td>
 	</tr>
 {/volist}
 </table>
