--- a/application/index/view/teacher/index.html
+++ b/application/index/view/teacher/index.html
@@ -1,6 +1,6 @@
-    {include file='public/header'}
-    {include file='public/menu'}
-	<table class="table table-striped table-bordered">
+{extend name="main" /}
+{block name="content"}
+		<table class="table table-striped table-bordered">
 		<tr>
 			<th>序号</th>
 			<th>ID</th>
@@ -9,7 +9,7 @@
 			<th>邮箱</th>
 			<th>用户名</th>
 			<th>创建时间</th>
-			<th>删除</th>
+			<th colspan="2">操作</th>
 		</tr>
 	{volist name="teachers" id="vo" key="num"}
 		<tr>
@@ -27,10 +27,10 @@
 			<td>{$vo.username}</td>
 			<td>{$vo.create_time}</td>
 			<td><a href="{:url('teacher/del',['id'=>$vo.id])}"><i class="fa fa-times"></i></a></td>
+			<td><a href="{:url('',['id'=>$vo.id])}"><i class="fa fa-pencil"></i></a></td>
 		</tr>
 	{/volist}
 	</table>
 {$teachers->render()}
-{include file="public/footer"}
-</body>
-</html>
+
+{/block}
