--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -1,240 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>register</title>
-	<link rel="stylesheet" href="__STATIC__/css/index.css">
-	<link rel="stylesheet" href="__STATIC__/css/bootstrap.min.css">
-	<link rel="stylesheet" href="__STATIC__/css/font-awesome.min.css">
-	<style>
-		body{font-family:Microsoft Yahei,Helvetica Neue,Arial,Helvetica,sans-serif;}
-	</style>
-</head>
-<body class="container-fluid">
-	<!-- 导航 -->
-	<nav class="navbar navbar-default" style="margin-top: 10px;">
-	  <div class="container-fluid">
-	    <!-- Brand and toggle get grouped for better mobile display -->
-	    <div class="navbar-header">
-	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-	        <span class="sr-only">Toggle navigation</span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	      </button>
-	      <a class="navbar-brand" href="#">Brand</a>
-	    </div>
-
-	    <!-- Collect the nav links, forms, and other content for toggling -->
-	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-	      <ul class="nav navbar-nav">
-	        <li class="active"><a href="{:url('index/index')}">首页 <span class="sr-only">(current)</span></a></li>
-
-
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">教师 <span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="{:url('teacher/index')}">教师信息</a></li>
-	            <li><a href="{:url('teacher/add')}">新增教师</a></li>
-	          </ul>
-	        </li>
-
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">课程 <span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="{:url('course/index')}">课程信息</a></li>
-	            <li><a href="{:url('course/add')}">新增课程</a></li>
-	          </ul>
-	        </li>
-	        
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">班级 <span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="{:url('klass/index')}">班级信息</a></li>
-	            <li><a href="{:url('klass/add')}">新增班级</a></li>
-	          </ul>
-	        </li>
-
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">学生 <span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="{:url('student/index')}">学生信息</a></li>
-	            <li><a href="{:url('student/add')}">新增学生</a></li>
-	          </ul>
-	        </li>
-
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">选课 <span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="{:url('klasscourse/index')}">选课信息</a></li>
-	            <li><a href="{:url('klasscourse/add')}">选课</a></li>
-	          </ul>
-	        </li>
-
-	      </ul>
-	      <ul class="nav navbar-nav navbar-right">
-	        <li><a href="#">Link</a></li>
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="#">Action</a></li>
-	            <li><a href="#">Another action</a></li>
-	            <li><a href="#">Something else here</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">Separated link</a></li>
-	          </ul>
-	        </li>
-	      </ul>
-	    </div>
-	    <!-- /.navbar-collapse -->
-	  </div>
-	  <!-- /.container-fluid -->
-	</nav>
-
-
-	<!-- 内容 -->
-
-	<div class="container">
-		<div class="row">
-			<!-- 左边start -->
-			<div class="col-md-3">
-				<!-- 教师栏目 -->
-				<div class="panel-group" id="accordion">
-					<div class="panel panel-info">
-						<div class="panel-heading">
-							<!--panel-title面板大标题-->
-							<div class="panel-title">
-								<!--data-parent展开收缩上一级-->
-								<a href="#collapseOne" data-toggle="collapse" data-parent="#accordion">教师栏目</a>
-							</div>
-						</div>
-						<div id="collapseOne" class="panel-collapse collapse">
-							<div class="panel-body">
-								<div class="col-sm-12"><a href="#" class="text-info">教师信息</a></div>
-							</div>
-							<div class="panel-body">
-								<div class="col-sm-12"><a href="#" class="text-info">增加教师</a></div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<!-- 学生栏目 -->
-				<div class="panel-group" id="accordion">
-					<div class="panel panel-success">
-						<div class="panel-heading">
-							<!--panel-title面板大标题-->
-							<div class="panel-title">
-								<!--data-parent展开收缩上一级-->
-								<a href="#collapseTwo" data-toggle="collapse" data-parent="#accordion">学生栏目</a>
-							</div>
-						</div>
-						<div id="collapseTwo" class="panel-collapse collapse">
-							<div class="panel-body">
-								<div class="col-sm-12"><a href="#" class="text-success">学生信息</a></div>
-							</div>
-							<div class="panel-body">
-								<div class="col-sm-12"><a href="#" class="text-success">增加学生</a></div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<!-- 班级栏目 -->
-				<div class="panel-group" id="accordion">
-					<div class="panel panel-warning">
-						<div class="panel-heading">
-							<!--panel-title面板大标题-->
-							<div class="panel-title">
-								<!--data-parent展开收缩上一级-->
-								<a href="#collapseThree" data-toggle="collapse" data-parent="#accordion">班级栏目</a>Three
-							</div>
-						</div>
-						<div id="collapseThree" class="panel-collapse collapse">
-							<div class="panel-body">
-								<div class="col-sm-12"><a href="#" class="text-warning">班级信息</a></div>
-							</div>
-							<div class="panel-body">
-								<div class="col-sm-12"><a href="#" class="text-warning">增加班级</a></div>
-							</div>
-						</div>
-					</div>
-				</div>
-				
-
-				<!-- 课程栏目 -->
-				<div class="panel-group" id="accordion">
-					<div class="panel panel-danger">
-						<div class="panel-heading">
-							<!--panel-title面板大标题-->
-							<div class="panel-title">
-								<!--data-parent展开收缩上一级-->
-								<a href="#collapseFour" data-toggle="collapse" data-parent="#accordion">课程栏目</a>
-							</div>
-						</div>
-						<div id="collapseFour" class="panel-collapse collapse">
-							<div class="panel-body">
-								<div class="col-sm-12"><a href="#" class="text-danger">课程信息</a></div>
-							</div>
-							<div class="panel-body">
-								<div class="col-sm-12"><a href="#" class="text-danger">增加课程</a></div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-
-				<!-- 选课栏目 -->
-				<div class="panel-group" id="accordion">
-					<div class="panel panel-primary">
-						<div class="panel-heading">
-							<!--panel-title面板大标题-->
-							<div class="panel-title">
-								<!--data-parent展开收缩上一级-->
-								<a href="#collapseFive" data-toggle="collapse" data-parent="#accordion">选课栏目</a>
-							</div>
-						</div>
-						<div id="collapseFive" class="panel-collapse collapse">
-							<div class="panel-body">
-								<div class="col-sm-12"><a href="#" class="text-primary">选课信息</a></div>
-							</div>
-							<div class="panel-body">
-								<div class="col-sm-12"><a href="#" class="text-primary">选课</a></div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-			</div>
-			<!-- 左边end -->
-			<!-- ############################################### -->
-			<!-- 右边start -->
-			<div class="col-md-9">
-				<!--jumbotron添加巨幕区域-->
-				<div class="jumbotron">
-					<p class="small" style="font-size: 30px;">Main</p>
-				</div>
-			</div>
-			<!-- 右边end -->
-			<!-- ############################################### -->
-		</div>	
-	</div>
-
-
-<!-- footer -->
-	<nav class="navbar-default navbar-fixed-bottom text-center">
-		All images and contents &copy; tarena
-	</nav>
-</body>
-</html>
-<script src="__STATIC__/js/Jquery.js"></script>
-   <script type="text/javascript" src = "__STATIC__/js/bootstrap.min.js"></script>
-<script>
-       var pathname = window.location.pathname + window.location.search;
-       $(".nav-tabs li a").each(function() {
-           var href = $(this).attr("href");
-           if(pathname ==  href){
-               $(this).parent("li").addClass("active");
-           }
-       });
-</script>
+{extend name="main"}
+{block name="content"}
+<!--jumbotron添加巨幕区域-->
+    <div class="jumbotron">
+        <p class="small" style="font-size: 30px;">我是首页</p>
+    </div>
+{/block}
