--- a/application/index/view/course/index.html
+++ b/application/index/view/course/index.html
@@ -1,4 +1,9 @@
-{include file="public/header" }
+{extend name='main'}
+{block name='content'}
+<div style="text-align: center;margin-bottom: 60px;">
+    <h2 style="margin-bottom: 20px;">课程信息</h2>
+    <span style="display: block;width: 100px;border:1px solid #999;margin:0 auto"></span>
+</div>
 <table class="table table-striped table-bordered">
 	<tr>
 		<th>id</th>
@@ -17,8 +22,4 @@
 {/volist}
 </table>
 {$courses->render()}
-
-
-	{include file="public/footer" }
-</body>
-</html>
+{/block}
