--- a/application/index/view/klass/index.html
+++ b/application/index/view/klass/index.html
@@ -1,22 +1,28 @@
-{include file="public/header" }
-  <table class="table table-striped table-bordered">
+{extend name="main"}
+{block name='content'}
+<div style="text-align: center;margin-bottom: 60px;">
+    <h2 style="margin-bottom: 20px;">班级信息</h2>
+    <span style="display: block;width: 100px;border:1px solid #999;margin:0 auto"></span>
+</div>
+<table class="table table-striped table-bordered">
     <tr>
-      <th>id</th>
-      <th>班级名</th>
-      <th>辅导员</th>
-      <th>创建时间</th>
-      <th colspan="2">操作</th>
+        <th>id</th>
+        <th>班级名</th>
+        <th>辅导员</th>
+        <th>创建时间</th>
+        <th colspan="2">操作</th>
     </tr>
-  {volist name="klass" id="vo"}
+    {volist name="klass" id="vo"}
     <tr>
-      <td>{$vo.id}</td>
-      <td>{$vo.name}</td>
-      <td>{$vo.teacher.name}</td>
-      <td>{$vo.create_time}</td>
-      <td><a href="{:url('klass/del',['id'=>$vo.id])}"><i class="fa fa-times"></i></a></td>
-      <td><a href="{:url('',['id'=>$vo.id])}"><i class="fa fa-pencil"></i></a></td>
+        <td>{$vo.id}</td>
+        <td>{$vo.name}</td>
+        <td>{$vo.teacher.name}</td>
+        <td>{$vo.create_time}</td>
+        <td><a href="{:url('klass/del',['id'=>$vo.id])}"><i class="fa fa-times"></i></a></td>
+        <td><a href="{:url('',['id'=>$vo.id])}"><i class="fa fa-pencil"></i></a></td>
     </tr>
-  {/volist}
-  </table>
-  {$klass->render()}
-{include file="public/footer" }
+    {/volist}
+</table>
+{$klass->render()}
+
+{/block}
