--- a/application/index/view/klasscourse/index.html
+++ b/application/index/view/klasscourse/index.html
@@ -1,24 +1,26 @@
-{include file="public/header" }
+{extend name='main'}
+{block name='content'}
+<div style="text-align: center;margin-bottom: 60px;">
+    <h2 style="margin-bottom: 20px;">选课信息</h2>
+    <span style="display: block;width: 100px;border:1px solid #999;margin:0 auto"></span>
+</div>
 <table class="table table-striped table-bordered">
-	<tr>
-		<th>id</th>
-		<th>班级名</th>
-		<th>课程名</th>
-		<th colspan="2">操作</th>
-	</tr>
-{volist name="courses" id="vo"}
-	<tr>
-		<td>{$vo.id}</td>
-		<td>{$vo.Course.name|default='课程为空'}</td>
-		<td>{$vo.Klass.name|default='班级为空'}</td>
-		<td><a href="{:url('klasscourse/del',['id'=>$vo.id])}"><i class="fa fa-times"></i></a></td>
-		<td><a href="{:url('',['id'=>$vo.id])}"><i class="fa fa-pencil"></i></a></td>
-	</tr>
-{/volist}
+    <tr>
+        <th>id</th>
+        <th>班级名</th>
+        <th>课程名</th>
+        <th colspan="2">操作</th>
+    </tr>
+    {volist name="courses" id="vo"}
+    <tr>
+        <td>{$vo.id}</td>
+        <td>{$vo.Course.name|default='课程为空'}</td>
+        <td>{$vo.Klass.name|default='班级为空'}</td>
+        <td><a href="{:url('klasscourse/del',['id'=>$vo.id])}"><i class="fa fa-times"></i></a></td>
+        <td><a href="{:url('',['id'=>$vo.id])}"><i class="fa fa-pencil"></i></a></td>
+    </tr>
+    {/volist}
 </table>
 {$courses->render()}
 
-
-	{include file="public/footer" }
-</body>
-</html>
+{/block}
