--- a/application/index/view/main.html
+++ b/application/index/view/main.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>register</title>
+    <title>教务管理系统</title>
     <link rel="stylesheet" href="__STATIC__/css/index.css">
     <link rel="stylesheet" href="__STATIC__/css/bootstrap.min.css">
     <link rel="stylesheet" href="__STATIC__/css/font-awesome.min.css">
@@ -11,6 +11,12 @@
     body {
         font-family: Microsoft Yahei, Helvetica Neue, Arial, Helvetica, sans-serif;
         background: #f7f7f7;
+    }
+    label{
+    	padding-left:10px;
+    }
+    i{
+    	padding-right:10px;
     }
     </style>
 </head>
@@ -88,7 +94,7 @@
         <!-- /.container-fluid -->
     </nav>
     <!-- 内容 -->
-    <div class="container">
+    <div class="container"  style="margin-bottom:9%">
         <div class="row">
             <!-- 左边start -->
             <div class="col-md-3">
@@ -99,15 +105,15 @@
                             <!--panel-title面板大标题-->
                             <div class="panel-title">
                                 <!--data-parent展开收缩上一级-->
-                                <a href="#collapseOne" data-toggle="collapse" data-parent="#accordion">教师栏目</a>
+                                <i class="fa fa-mortar-board"></i><a href="#collapseOne" data-toggle="collapse" data-parent="#accordion">教师栏目</a>
                             </div>
                         </div>
                         <div id="collapseOne" class="panel-collapse collapse">
                             <div class="panel-body">
-                                <div class="col-sm-12"><a href="#" class="text-info">教师信息</a></div>
+                                <div class="col-sm-12"><a href="{:url('teacher/index')}" class="text-info">教师信息</a></div>
                             </div>
                             <div class="panel-body">
-                                <div class="col-sm-12"><a href="#" class="text-info">增加教师</a></div>
+                                <div class="col-sm-12"><a href="{:url('teacher/add')}" class="text-info">增加教师</a></div>
                             </div>
                         </div>
                     </div>
@@ -119,15 +125,15 @@
                             <!--panel-title面板大标题-->
                             <div class="panel-title">
                                 <!--data-parent展开收缩上一级-->
-                                <a href="#collapseTwo" data-toggle="collapse" data-parent="#accordion">学生栏目</a>
+                                <i class="fa fa-paper-plane"></i><a href="#collapseTwo" data-toggle="collapse" data-parent="#accordion">学生栏目</a>
                             </div>
                         </div>
                         <div id="collapseTwo" class="panel-collapse collapse">
                             <div class="panel-body">
-                                <div class="col-sm-12"><a href="#" class="text-success">学生信息</a></div>
+                                <div class="col-sm-12"><a href="{:url('student/index')}" class="text-success">学生信息</a></div>
                             </div>
                             <div class="panel-body">
-                                <div class="col-sm-12"><a href="#" class="text-success">增加学生</a></div>
+                                <div class="col-sm-12"><a href="{:url('student/add')}" class="text-success">增加学生</a></div>
                             </div>
                         </div>
                     </div>
@@ -139,15 +145,15 @@
                             <!--panel-title面板大标题-->
                             <div class="panel-title">
                                 <!--data-parent展开收缩上一级-->
-                                <a href="#collapseThree" data-toggle="collapse" data-parent="#accordion">班级栏目</a>
+                                <i class="fa fa-home"></i><a href="#collapseThree" data-toggle="collapse" data-parent="#accordion">班级栏目</a>
                             </div>
                         </div>
                         <div id="collapseThree" class="panel-collapse collapse">
                             <div class="panel-body">
-                                <div class="col-sm-12"><a href="#" class="text-warning">班级信息</a></div>
+                                <div class="col-sm-12"><a href="{:url('klass/index')}" class="text-warning">班级信息</a></div>
                             </div>
                             <div class="panel-body">
-                                <div class="col-sm-12"><a href="#" class="text-warning">增加班级</a></div>
+                                <div class="col-sm-12"><a href="{:url('klass/add')}" class="text-warning">增加班级</a></div>
                             </div>
                         </div>
                     </div>
@@ -159,15 +165,15 @@
                             <!--panel-title面板大标题-->
                             <div class="panel-title">
                                 <!--data-parent展开收缩上一级-->
-                                <a href="#collapseFour" data-toggle="collapse" data-parent="#accordion">课程栏目</a>
+                                <i class="fa fa-book"></i><a href="#collapseFour" data-toggle="collapse" data-parent="#accordion">课程栏目</a>
                             </div>
                         </div>
                         <div id="collapseFour" class="panel-collapse collapse">
                             <div class="panel-body">
-                                <div class="col-sm-12"><a href="#" class="text-danger">课程信息</a></div>
+                                <div class="col-sm-12"><a href="{:url('course/index')}" class="text-danger">课程信息</a></div>
                             </div>
                             <div class="panel-body">
-                                <div class="col-sm-12"><a href="#" class="text-danger">增加课程</a></div>
+                                <div class="col-sm-12"><a href="{:url('course/add')}" class="text-danger">增加课程</a></div>
                             </div>
                         </div>
                     </div>
@@ -179,19 +185,29 @@
                             <!--panel-title面板大标题-->
                             <div class="panel-title">
                                 <!--data-parent展开收缩上一级-->
-                                <a href="#collapseFive" data-toggle="collapse" data-parent="#accordion">选课栏目</a>
+                                <i class="fa fa-lightbulb-o"></i><a href="#collapseFive" data-toggle="collapse" data-parent="#accordion">选课栏目</a>
                             </div>
                         </div>
                         <div id="collapseFive" class="panel-collapse collapse">
                             <div class="panel-body">
-                                <div class="col-sm-12"><a href="#" class="text-primary">选课信息</a></div>
+                                <div class="col-sm-12"><a href="{:url('klasscourse/index')}" class="text-primary">选课信息</a></div>
                             </div>
                             <div class="panel-body">
-                                <div class="col-sm-12"><a href="#" class="text-primary">选课</a></div>
+                                <div class="col-sm-12"><a href="{:url('klasscourse/add')}" class="text-primary">选课</a></div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <!-- 16:9 aspect ratio 日历-->
+                <!-- <div class="panel panel-default">
+				  <div class="panel-heading">日历</div>
+				  <div class="panel-body">
+				    <div class="embed-responsive embed-responsive-16by9">
+					  <iframe class="embed-responsive-item" src="rili.php" scrolling="no"></iframe>
+					</div>
+				  </div>
+				</div> -->
+				
             </div>
             <!-- 左边end -->
             <!-- ############################################### -->
