--- a/application/index/view/student/add.html
+++ b/application/index/view/student/add.html
@@ -1,57 +1,60 @@
-{include file="public/header" }
+{extend name='main'} {block name='content'}
+<div style="text-align: center;margin-bottom: 60px;">
+    <h2 style="margin-bottom: 20px;">添加学生</h2>
+    <span style="display: block;width: 100px;border:1px solid #999;margin:0 auto"></span>
+</div>
 <form class="form-horizontal" action="{:url('student/save')}" method="post">
-  <div class="form-group" style="margin-top:10px;">
-    <label for="inputEmail3" class="col-sm-2 control-label">姓名</label>
-    <div class="col-sm-10">
-      <input type="text" class="form-control" name="name" placeholder="姓名">
+    <div class="form-group" style="margin-top:10px;">
+        <label for="inputEmail3" class="col-sm-2 control-label">姓名</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" name="name" placeholder="姓名">
+        </div>
     </div>
-  </div>
-  <div class="form-group">
-    <label for="inputPassword3" class="col-sm-2 control-label">学号</label>
-    <div class="col-sm-10">
-      <input type="number" class="form-control" name="num" id="inputPassword3" placeholder="学号">
+    <div class="form-group">
+        <label for="inputPassword3" class="col-sm-2 control-label">学号</label>
+        <div class="col-sm-10">
+            <input type="number" class="form-control" name="num" id="inputPassword3" placeholder="学号">
+        </div>
     </div>
-  </div>
-  <div class="form-group">
+    <div class="form-group">
         <label for="sex" class="col-sm-2 control-label">性别</label>
         <label class="radio-inline">
-        <input type="radio" name="sex" id="inlineRadio1" checked value="0"> 男
-      </label>
-      <label class="radio-inline">
-        <input type="radio" name="sex" id="inlineRadio2" value="1"> 女
-      </label>
-      </div>
-  <div class="form-group">
-    <label for="inputEmail3" class="col-sm-2 control-label">班级</label>
-    <div class="col-sm-10">
-      <select class="form-control" name="klass_id">
-        {volist name="klass" id='vo'}
-          <option value="{$vo.id}">{$vo.name}</option>
-        {/volist}
-      </select>
+            <input type="radio" name="sex" id="inlineRadio1" checked value="0"> 男
+        </label>
+        <label class="radio-inline">
+            <input type="radio" name="sex" id="inlineRadio2" value="1"> 女
+        </label>
     </div>
-    
-  </div>
-  <div class="form-group">
-    <label for="inputPassword3" class="col-sm-2 control-label">邮箱</label>
-    <div class="col-sm-10">
-      <input type="text" class="form-control" name="email" placeholder="邮箱">
+    <div class="form-group">
+        <label for="inputEmail3" class="col-sm-2 control-label">班级</label>
+        <div class="col-sm-10">
+            <select class="form-control" name="klass_id">
+                {volist name="klass" id='vo'}
+                <option value="{$vo.id}">{$vo.name}</option>
+                {/volist}
+            </select>
+        </div>
     </div>
-  </div>
-  <div class="form-group">
-    <label for="inputEmail3" class="col-sm-2 control-label">验证码</label>
-    <div class="col-sm-10">
-      <input type="text" class="form-control" name="vote" placeholder="请输入验证码">
+    <div class="form-group">
+        <label for="inputPassword3" class="col-sm-2 control-label">邮箱</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" name="email" placeholder="邮箱">
+        </div>
     </div>
-  </div>
-  <div class="form-group">
-    <label for="inputEmail3" class="col-sm-2 control-label"></label>
-    <img src="{:captcha_src()}" class="img-responsive img-rounded" alt="captcha" onclick="this.src=this.src+'?'+Math.random()" style="margin-bottom: 10px;" />
-  </div>
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default">提交</button>
+    <div class="form-group">
+        <label for="inputEmail3" class="col-sm-2 control-label">验证码</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" name="vote" placeholder="请输入验证码">
+        </div>
     </div>
-  </div>
+    <div class="form-group">
+        <label for="inputEmail3" class="col-sm-2 control-label"></label>
+        <img src="{:captcha_src()}" class="img-responsive img-rounded" alt="captcha" onclick="this.src=this.src+'?'+Math.random()" style="margin-bottom: 10px;" />
+    </div>
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+            <button type="submit" class="btn btn-default">提交</button>
+        </div>
+    </div>
 </form>
-{include file="public/footer" }
+{/block}
