--- a/application/index/view/teacher/index.html
+++ b/application/index/view/teacher/index.html
@@ -1,36 +1,33 @@
-{extend name="main" /}
-{block name="content"}
-		<table class="table table-striped table-bordered">
-		<tr>
-			<th>序号</th>
-			<th>ID</th>
-			<th>姓名</th>
-			<th>性别</th>
-			<th>邮箱</th>
-			<th>用户名</th>
-			<th>创建时间</th>
-			<th colspan="2">操作</th>
-		</tr>
-	{volist name="teachers" id="vo" key="num"}
-		<tr>
-			<td>{$num}</td>
-			<td>{$vo.id}</td>
-			<td>{$vo.name}</td>
-			<td>
-			{eq name="vo.sex" value="0"}
-			男
-			{else/}
-			女
-			{/eq}
-			</td>
-			<td>{$vo.email}</td>
-			<td>{$vo.username}</td>
-			<td>{$vo.create_time}</td>
-			<td><a href="{:url('teacher/del',['id'=>$vo.id])}"><i class="fa fa-times"></i></a></td>
-			<td><a href="{:url('',['id'=>$vo.id])}"><i class="fa fa-pencil"></i></a></td>
-		</tr>
-	{/volist}
-	</table>
-{$teachers->render()}
-
-{/block}
+{extend name="main" /} {block name="content"}
+<div style="text-align: center;margin-bottom: 60px;">
+		<h2 style="margin-bottom: 20px;">老师信息</h2>
+		<span style="display: block;width: 100px;border:1px solid #999;margin:0 auto"></span>
+	</div>
+<table class="table table-striped table-bordered">
+    <tr>
+        <th>序号</th>
+        <th>ID</th>
+        <th>姓名</th>
+        <th>性别</th>
+        <th>邮箱</th>
+        <th>用户名</th>
+        <th>创建时间</th>
+        <th colspan="2">操作</th>
+    </tr>
+    {volist name="teachers" id="vo" key="num"}
+    <tr>
+        <td>{$num}</td>
+        <td>{$vo.id}</td>
+        <td>{$vo.name}</td>
+        <td>
+            {eq name="vo.sex" value="0"} 男 {else/} 女 {/eq}
+        </td>
+        <td>{$vo.email}</td>
+        <td>{$vo.username}</td>
+        <td>{$vo.create_time}</td>
+        <td><a href="{:url('teacher/del',['id'=>$vo.id])}"><i class="fa fa-times"></i></a></td>
+        <td><a href="{:url('',['id'=>$vo.id])}"><i class="fa fa-pencil"></i></a></td>
+    </tr>
+    {/volist}
+</table>
+{$teachers->render()} {/block}
