--- a/application/index/view/student/index.html
+++ b/application/index/view/student/index.html
@@ -26,7 +26,7 @@
         <td>{$vo.email}</td>
         <td>{$vo.create_time}</td>
         <td><a href="{:url('student/del',['id'=>$vo.id])}"><i class="fa fa-times"></i></a></td>
-        <td><a href="{:url('',['id'=>$vo.id])}"><i class="fa fa-pencil"></i></a></td>
+        <td><a href="{:url('student/edit',['id'=>$vo.id])}"><i class="fa fa-pencil"></i></a></td>
     </tr>
     {/volist}
 </table>
