--- a/application/index/view/teacher/index.html
+++ b/application/index/view/teacher/index.html
@@ -11,7 +11,7 @@
         <th>邮箱</th>
         <th>用户名</th>
         <th>创建时间</th>
-        <th colspan="2">操作</th>
+        <th colspan="3">操作</th>
     </tr>
     {volist name="teachers" id="vo" key="num"}
     <tr>
@@ -23,9 +23,32 @@
         <td>{$vo.email}</td>
         <td>{$vo.username}</td>
         <td>{$vo.create_time}</td>
-        <td><a href="{:url('teacher/del',['id'=>$vo.id])}" title="删除"><i class="fa fa-times"></i></a></td>
+        <td><a href="#" title="详情" data-toggle="modal" data-target="#divModal"><i class="fa fa-eye"></i></a></td>
         <td><a href="{:url('teacher/edit',['id'=>$vo.id])}" title="编辑"><i class="fa fa-pencil"></i></a></td>
+        <td><a href="{:url('teacher/del',['id'=>$vo.id])}" title="删除"><i class="fa fa-times"></i></a></td>
     </tr>
+    <!--modal模态框，fade淡入淡出效果,data-backdrop="false"指定一个静态背景，当用户点击模态框外部时不会关闭模态框-->
+                            <div id="divModal" class="modal fade" data-backdrop="false">
+                                <!--modal-dialog对话框-->
+                                <div class="modal-dialog">
+                                    <!--弹出框的内容，包含header,body,footer-->
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <!--close当前按钮显示的是关闭效果，data-dismiss关闭模态框-->
+                                            <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+                                            <h4 class="model-title">{$vo.name}的信息</h4>
+                                        </div>
+                                        <div class="modal-body">
+                                            姓名：{$vo.name}<br>
+                                            性别：{eq name='$vo.sex' value='0'}男{else}女{/eq}
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-primary">Print</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
     {/volist}
 </table>
 {$teachers->render()} {/block}
