--- a/application/index/view/klasscourse/index.html
+++ b/application/index/view/klasscourse/index.html
@@ -9,15 +9,42 @@
         <th>id</th>
         <th>班级名</th>
         <th>课程名</th>
-        <th colspan="2">操作</th>
+        <th colspan="3">操作</th>
     </tr>
     {volist name="courses" id="vo"}
     <tr>
         <td>{$vo.id}</td>
-        <td>{$vo.Course.name|default='课程为空'}</td>
         <td>{$vo.Klass.name|default='班级为空'}</td>
-        <td><a href="{:url('klasscourse/del',['id'=>$vo.id])}"><i class="fa fa-times"></i></a></td>
-        <td><a href="{:url('klasscourse/edit',['id'=>$vo.id])}"><i class="fa fa-pencil"></i></a></td>
+        <td>{$vo.Course.name|default='课程为空'}</td>
+        <td><a href="#" title="详情" data-toggle="modal" data-target="#divModal{$vo.id}"><i class="fa fa-eye"></i></a></td>
+        <!--modal模态框，fade淡入淡出效果,data-backdrop="false"指定一个静态背景，当用户点击模态框外部时不会关闭模态框-->
+        <div id="divModal{$vo.id}" class="modal fade" data-backdrop="false">
+            <!--modal-dialog对话框-->
+            <div class="modal-dialog">
+                <!--弹出框的内容，包含header,body,footer-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <!--close当前按钮显示的是关闭效果，data-dismiss关闭模态框-->
+                        <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+                        <h4 class="model-title">选课信息</h4>
+                    </div>
+                    <div class="modal-body">
+                        课程：{$vo.Course.name|default='课程为空'}<br>
+                        班级：{$vo.Klass.name|default='班级为空'}<br>
+                        属性：选课
+                    </div>
+                    <div class="modal-footer">
+                        <form action="{:url('klasscourse/wrong')}" method="post">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">关闭详情</button>
+                            <button type="submit" class="btn btn-primary">更多...</button>
+                        </form>
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+        <td><a href="{:url('klasscourse/edit',['id'=>$vo.id])}" title="编辑"><i class="fa fa-pencil"></i></a></td>
+        <td><a href="{:url('klasscourse/del',['id'=>$vo.id])}" title="删除"><i class="fa fa-times"></i></a></td>
     </tr>
     {/volist}
 </table>
