--- a/application/index/view/main.html
+++ b/application/index/view/main.html
@@ -97,117 +97,58 @@
     <div class="container"  style="margin-bottom:9%">
         <div class="row">
             <!-- 左边start -->
-            <div class="col-md-3">
-                <!-- 教师栏目 -->
-                <div class="panel-group" id="accordion">
-                    <div class="panel panel-info">
-                        <div class="panel-heading">
-                            <!--panel-title面板大标题-->
-                            <div class="panel-title">
-                                <!--data-parent展开收缩上一级-->
-                                <i class="fa fa-mortar-board"></i><a href="#collapseOne" data-toggle="collapse" data-parent="#accordion">教师栏目</a>
-                            </div>
-                        </div>
-                        <div id="collapseOne" class="panel-collapse collapse">
-                            <div class="panel-body">
-                                <div class="col-sm-12"><a href="{:url('teacher/index')}" class="text-info">教师信息</a></div>
-                            </div>
-                            <div class="panel-body">
-                                <div class="col-sm-12"><a href="{:url('teacher/add')}" class="text-info">增加教师</a></div>
-                            </div>
-                        </div>
-                    </div>
+            <div class="col-md-3 m0">
+                <!-- 首页 菜单 -->
+                <div class="panel panel-success n0" style="display:block">
+                    <div class="panel-heading"><h3>导航</h3></div>
+                    <ul class="list-group">
+                        <li class="list-group-item"><a href="#" class="text-muted">教师栏目</a></li>
+                        <li class="list-group-item"><a href="#" class="text-primary">学生栏目</a></li>
+                        <li class="list-group-item"><a href="#" class="text-danger">班级栏目</a></li>
+                        <li class="list-group-item"><a href="#" class="text-success">课程栏目</a></li>
+                        <li class="list-group-item"><a href="#" class="text-info">选课栏目</a></li>
+                    </ul>
                 </div>
-                <!-- 学生栏目 -->
-                <div class="panel-group" id="accordion">
-                    <div class="panel panel-success">
-                        <div class="panel-heading">
-                            <!--panel-title面板大标题-->
-                            <div class="panel-title">
-                                <!--data-parent展开收缩上一级-->
-                                <i class="fa fa-paper-plane"></i><a href="#collapseTwo" data-toggle="collapse" data-parent="#accordion">学生栏目</a>
-                            </div>
-                        </div>
-                        <div id="collapseTwo" class="panel-collapse collapse">
-                            <div class="panel-body">
-                                <div class="col-sm-12"><a href="{:url('student/index')}" class="text-success">学生信息</a></div>
-                            </div>
-                            <div class="panel-body">
-                                <div class="col-sm-12"><a href="{:url('student/add')}" class="text-success">增加学生</a></div>
-                            </div>
-                        </div>
-                    </div>
+                <!-- 教师 菜单 -->
+                <div class="panel panel-primary n0" style="display:none">
+                    <div class="panel-heading"><h3>教师栏目</h3></div>
+                    <ul class="list-group">
+                        <li class="list-group-item"><a href="#" class="text-muted">教师信息</a></li>
+                        <li class="list-group-item"><a href="#" class="text-primary">添加教师</a></li>
+                    </ul>
                 </div>
-                <!-- 班级栏目 -->
-                <div class="panel-group" id="accordion">
-                    <div class="panel panel-warning">
-                        <div class="panel-heading">
-                            <!--panel-title面板大标题-->
-                            <div class="panel-title">
-                                <!--data-parent展开收缩上一级-->
-                                <i class="fa fa-home"></i><a href="#collapseThree" data-toggle="collapse" data-parent="#accordion">班级栏目</a>
-                            </div>
-                        </div>
-                        <div id="collapseThree" class="panel-collapse collapse">
-                            <div class="panel-body">
-                                <div class="col-sm-12"><a href="{:url('klass/index')}" class="text-warning">班级信息</a></div>
-                            </div>
-                            <div class="panel-body">
-                                <div class="col-sm-12"><a href="{:url('klass/add')}" class="text-warning">增加班级</a></div>
-                            </div>
-                        </div>
-                    </div>
+                <!-- 学生 菜单 -->
+                <div class="panel panel-info n0" style="display:none">
+                    <div class="panel-heading"><h3>学生栏目</h3></div>
+                    <ul class="list-group">
+                        <li class="list-group-item"><a href="#" class="text-muted">学生信息</a></li>
+                        <li class="list-group-item"><a href="#" class="text-info">添加学生</a></li>
+                    </ul>
                 </div>
-                <!-- 课程栏目 -->
-                <div class="panel-group" id="accordion">
-                    <div class="panel panel-danger">
-                        <div class="panel-heading">
-                            <!--panel-title面板大标题-->
-                            <div class="panel-title">
-                                <!--data-parent展开收缩上一级-->
-                                <i class="fa fa-book"></i><a href="#collapseFour" data-toggle="collapse" data-parent="#accordion">课程栏目</a>
-                            </div>
-                        </div>
-                        <div id="collapseFour" class="panel-collapse collapse">
-                            <div class="panel-body">
-                                <div class="col-sm-12"><a href="{:url('course/index')}" class="text-danger">课程信息</a></div>
-                            </div>
-                            <div class="panel-body">
-                                <div class="col-sm-12"><a href="{:url('course/add')}" class="text-danger">增加课程</a></div>
-                            </div>
-                        </div>
-                    </div>
+                <!-- 班级 菜单 -->
+                <div class="panel panel-warning n0" style="display:none">
+                    <div class="panel-heading"><h3 class="center-block">班级栏目</h3></div>
+                    <ul class="list-group">
+                        <li class="list-group-item"><a href="#" class="text-muted">班级信息</a></li>
+                        <li class="list-group-item"><a href="#" class="text-warning">添加班级</a></li>
+                    </ul>
                 </div>
-                <!-- 选课栏目 -->
-                <div class="panel-group" id="accordion">
-                    <div class="panel panel-primary">
-                        <div class="panel-heading">
-                            <!--panel-title面板大标题-->
-                            <div class="panel-title">
-                                <!--data-parent展开收缩上一级-->
-                                <i class="fa fa-lightbulb-o"></i><a href="#collapseFive" data-toggle="collapse" data-parent="#accordion">选课栏目</a>
-                            </div>
-                        </div>
-                        <div id="collapseFive" class="panel-collapse collapse">
-                            <div class="panel-body">
-                                <div class="col-sm-12"><a href="{:url('klasscourse/index')}" class="text-primary">选课信息</a></div>
-                            </div>
-                            <div class="panel-body">
-                                <div class="col-sm-12"><a href="{:url('klasscourse/add')}" class="text-primary">选课</a></div>
-                            </div>
-                        </div>
-                    </div>
+                <!-- 课程 菜单 -->
+                <div class="panel panel-danger n0" style="display:none">
+                    <div class="panel-heading"><h3>课程栏目</h3></div>
+                    <ul class="list-group">
+                        <li class="list-group-item"><a href="#" class="text-muted">课程信息</a></li>
+                        <li class="list-group-item"><a href="#" class="text-danger">添加课程</a></li>
+                    </ul>
                 </div>
-                <!-- 16:9 aspect ratio 日历-->
-                <!-- <div class="panel panel-default">
-				  <div class="panel-heading">日历</div>
-				  <div class="panel-body">
-				    <div class="embed-responsive embed-responsive-16by9">
-					  <iframe class="embed-responsive-item" src="rili.php" scrolling="no"></iframe>
-					</div>
-				  </div>
-				</div> -->
-				
+                <!-- 选课 菜单 -->
+                <div class="panel panel-success n0" style="display:none">
+                    <div class="panel-heading"><h3>选课栏目</h3></div>
+                    <ul class="list-group">
+                        <li class="list-group-item"><a href="#" class="text-muted">选课信息</a></li>
+                        <li class="list-group-item"><a href="#" class="text-success">添加选课</a></li>
+                    </ul>
+                </div>
             </div>
             <!-- 左边end -->
             <!-- ############################################### -->
@@ -232,10 +173,9 @@
 var pathname = window.location.pathname + window.location.search;
 $(".status li a").each(function() {
     var href = $(this).attr("href");
-    console.log(href);
-    console.log(pathname);
     if (pathname == href) {
         $(this).parent("li").addClass("active");
+        $('#m0').parents('.n0').css('display','block');
     }
 });
 </script>
