--- a/application/index/view/login/index.html
+++ b/application/index/view/login/index.html
@@ -36,7 +36,11 @@
                     <input type="text"  class="form-control input-lg col-md-6" name="code">
                     <img src="{:captcha_src()}" onclick="this.src=this.src+'?'+Math.random()">
                 </div>
-                <button type="submit" class="btn btn-primary">登陆后台</button>
+                 <div class="form-group">
+                    <div class="col-sm-offset-8 col-sm-10">
+                        <button type="submit" style="margin-top:10px;" class="btn btn-primary">登陆后台</button>
+                    </div>
+                </div>
             </form>
         </section>
     </div>
@@ -45,7 +49,7 @@
 <footer id="footer">
     <div class="text-center padder">
         <p>
-            <small>Powered By whoisMy94.top<br> copyright &copy; 2018</small>
+            <small>Powered By <a href="http://wlh.whoisMy94.top">whoisMy94.top</a><br> copyright &copy; 2018</small>
         </p>
     </div>
 </footer>
