--- a/application/index/view/teacher/index.html
+++ b/application/index/view/teacher/index.html
@@ -52,8 +52,8 @@
                 </div>
             </div>
         </div>
-        <td><a href="{:url('teacher/edit',['id'=>$vo.id])}" title="编辑"><i class="fa fa-pencil"></i></a></td>
-        <td><a href="{:url('teacher/del',['id'=>$vo.id])}" title="删除"><i class="fa fa-times"></i></a></td>
+        <td><a href="{:url('teacher/edit',['id'=>$vo.id])}" title="编辑"><i class="fa fa-edit"></i></a></td>
+        <td><a href="{:url('teacher/del',['id'=>$vo.id])}" title="删除"><i class="fa fa-trash"></i></a></td>
     </tr>
     {/volist}
 </table>
