--- a/application/index/view/course/index.html
+++ b/application/index/view/course/index.html
@@ -42,8 +42,8 @@
                 </div>
             </div>
         </div>
-		<td><a href="{:url('course/edit',['id'=>$vo.id])}" title="编辑"><i class="fa fa-pencil"></i></a></td>
-		<td><a href="{:url('course/del',['id'=>$vo.id])}" title="删除"><i class="fa fa-times"></i></a></td>
+		<td><a href="{:url('course/edit',['id'=>$vo.id])}" title="编辑"><i class="fa fa-edit"></i></a></td>
+		<td><a href="{:url('course/del',['id'=>$vo.id])}" title="删除"><i class="fa fa-trash"></i></a></td>
 	</tr>
 {/volist}
 </table>
