--- a/application/index/view/main.html
+++ b/application/index/view/main.html
@@ -73,14 +73,21 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">选课 <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="{:url('klasscourse/index')}">选课信息</a></li>
-                            <li><a href="{:url('klasscourse/add')}">选课</a></li>
+                            <li><a href="{:url('klasscourse/add')}">添加选课</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">公告 <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="{:url('notice/index')}">公告详情</a></li>
+                            <li><a href="{:url('notice/add')}">添加公告</a></li>
                         </ul>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a></a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user" style="margin-right:5px;"></i>{:session('ss_name')}<span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user-secret" style="margin-right:5px;"></i>{:session('ss_name')}<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="{:url('login/login')}">退出</a></li>
                             <li role="separator" class="divider"></li>
@@ -100,53 +107,15 @@
             <div class="col-md-3 m0">
                 <!-- 首页 菜单 -->
                 <div class="panel panel-success n0" style="display:block">
-                    <div class="panel-heading"><h3>导航</h3></div>
+                    <div class="panel-heading"><h3>栏目列表</h3></div>
                     <ul class="list-group">
-                        <li class="list-group-item"><a href="#" class="text-muted">教师栏目</a></li>
-                        <li class="list-group-item"><a href="#" class="text-primary">学生栏目</a></li>
-                        <li class="list-group-item"><a href="#" class="text-danger">班级栏目</a></li>
-                        <li class="list-group-item"><a href="#" class="text-success">课程栏目</a></li>
-                        <li class="list-group-item"><a href="#" class="text-info">选课栏目</a></li>
-                    </ul>
-                </div>
-                <!-- 教师 菜单 -->
-                <div class="panel panel-primary n0" style="display:none">
-                    <div class="panel-heading"><h3>教师栏目</h3></div>
-                    <ul class="list-group">
-                        <li class="list-group-item"><a href="#" class="text-muted">教师信息</a></li>
-                        <li class="list-group-item"><a href="#" class="text-primary">添加教师</a></li>
-                    </ul>
-                </div>
-                <!-- 学生 菜单 -->
-                <div class="panel panel-info n0" style="display:none">
-                    <div class="panel-heading"><h3>学生栏目</h3></div>
-                    <ul class="list-group">
-                        <li class="list-group-item"><a href="#" class="text-muted">学生信息</a></li>
-                        <li class="list-group-item"><a href="#" class="text-info">添加学生</a></li>
-                    </ul>
-                </div>
-                <!-- 班级 菜单 -->
-                <div class="panel panel-warning n0" style="display:none">
-                    <div class="panel-heading"><h3 class="center-block">班级栏目</h3></div>
-                    <ul class="list-group">
-                        <li class="list-group-item"><a href="#" class="text-muted">班级信息</a></li>
-                        <li class="list-group-item"><a href="#" class="text-warning">添加班级</a></li>
-                    </ul>
-                </div>
-                <!-- 课程 菜单 -->
-                <div class="panel panel-danger n0" style="display:none">
-                    <div class="panel-heading"><h3>课程栏目</h3></div>
-                    <ul class="list-group">
-                        <li class="list-group-item"><a href="#" class="text-muted">课程信息</a></li>
-                        <li class="list-group-item"><a href="#" class="text-danger">添加课程</a></li>
-                    </ul>
-                </div>
-                <!-- 选课 菜单 -->
-                <div class="panel panel-success n0" style="display:none">
-                    <div class="panel-heading"><h3>选课栏目</h3></div>
-                    <ul class="list-group">
-                        <li class="list-group-item"><a href="#" class="text-muted">选课信息</a></li>
-                        <li class="list-group-item"><a href="#" class="text-success">添加选课</a></li>
+                        <li class="list-group-item"><a href="{:url('teacher/index')}" class="text-muted">
+                        <i class="fa fa-mortar-board"></i>教师栏目</a></li>
+                        <li class="list-group-item"><a href="{:url('student/index')}" class="text-primary"><i class="fa fa-send"></i>学生栏目</a></li>
+                        <li class="list-group-item"><a href="{:url('klass/index')}" class="text-danger"><i class="fa fa-group"></i>班级栏目</a></li>
+                        <li class="list-group-item"><a href="{:url('course/index')}" class="text-success"><i class="fa fa-book"></i>课程栏目</a></li>
+                        <li class="list-group-item"><a href="{:url('klasscourse/index')}" class="text-info"><i class="fa fa-tags"></i>选课栏目</a></li>
+                        <li class="list-group-item"><a href="{:url('notice/index')}" class="text-info"><i class="fa fa-bullhorn"></i>公告栏目</a></li>
                     </ul>
                 </div>
             </div>
