--- a/application/index/view/notice/index.html
+++ b/application/index/view/notice/index.html
@@ -1,23 +1,23 @@
 {extend name="main"}
-{block name='content'}
+{block name="content"}
 <div style="text-align: center;margin-bottom: 60px;">
-    <h2 style="margin-bottom: 20px;">班级信息</h2>
+    <h2 style="margin-bottom: 20px;">公告信息</h2>
     <span style="display: block;width: 100px;border:1px solid #999;margin:0 auto"></span>
 </div>
 <table class="table table-striped table-bordered">
     <tr>
-        <th>id</th>
-        <th>班级名</th>
-        <th>辅导员</th>
-        <th>创建时间</th>
+        <th>序号</th>
+        <th>标题</th>
+        <th>内容</th>
+        <th>发布时间</th>
         <th colspan="3">操作</th>
     </tr>
-    {volist name="klass" id="vo"}
+    {volist name="notices" id="vo"}
     <tr>
         <td>{$vo.id}</td>
-        <td>{$vo.name}</td>
-        <td>{$vo.teacher.name|default='暂缺辅导员'}</td>
-        <td>{$vo.create_time}</td>
+        <td>{$vo.title}</td>
+        <td>{$vo.content}</td>
+        <td>{$vo.update_time}</td>
         <td><a href="#" title="详情" data-toggle="modal" data-target="#divModal{$vo.id}"><i class="fa fa-eye"></i></a></td>
         <!--modal模态框，fade淡入淡出效果,data-backdrop="false"指定一个静态背景，当用户点击模态框外部时不会关闭模态框-->
         <div id="divModal{$vo.id}" class="modal fade" data-backdrop="false">
@@ -28,15 +28,16 @@
                     <div class="modal-header">
                         <!--close当前按钮显示的是关闭效果，data-dismiss关闭模态框-->
                         <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
-                        <h4 class="model-title">{$vo.name}的信息</h4>
+                        <h4 class="model-title">公告详情</h4>
                     </div>
                     <div class="modal-body">
-                        班级名：{$vo.name}<br>
-                        辅导员：{$vo.teacher.name|default='暂缺辅导员'}<br>
-                        属性：班级
+                        标题：{$vo.title}<br>
+                        内容：{$vo.content}<br>
+                        状态：{eq name="vo.status" value="1"}公开{else}私密{/eq}<br>
+                        属性：公告
                     </div>
                     <div class="modal-footer">
-                        <form action="{:url('klass/wrong')}" method="post">
+                        <form action="{:url('notice/wrong')}" method="post">
                             <button type="button" class="btn btn-default" data-dismiss="modal">关闭详情</button>
                             <button type="submit" class="btn btn-primary">更多...</button>
                         </form>
@@ -45,11 +46,9 @@
                 </div>
             </div>
         </div>
-        <td><a href="{:url('klass/edit',['id'=>$vo.id])}" title="编辑"><i class="fa fa-edit"></i></a></td>
-        <td><a href="{:url('klass/del',['id'=>$vo.id])}" title="删除"><i class="fa fa-trash"></i></a></td>
+        <td><a href="{:url('notice/edit',['id'=>$vo.id])}" title="编辑"><i class="fa fa-edit"></i></a></td>
+        <td><a href="{:url('notice/del',['id'=>$vo.id])}" title="删除"><i class="fa fa-trash"></i></a></td>
     </tr>
     {/volist}
-</table>
-{$klass->render()}
-
+</table>{$notices->render()}
 {/block}
