--- a/application/index/view/main.html
+++ b/application/index/view/main.html
@@ -174,3 +174,9 @@ $(".status li a").each(function() {
         UM.getEditor('myEditor').setWidth(ww*0.83);
     });
 </script>
+<!-- 公告状态 -->
+<script type="text/javascript">
+    $('body').ready(function(){
+        $('.sm').attr('checked') = 'checked';
+    });
+</script>
