--- a/application/index/view/notice/add.html
+++ b/application/index/view/notice/add.html
@@ -12,16 +12,16 @@
         </div>
     </div>
     <div class="form-group">
-        <label for="inputEmail4" class="col-sm-2 control-label">内容</label>
+        <label for="myEditor" class="col-sm-2 control-label">内容</label>
         <div class="col-sm-10">
-            <textarea class="form-control" id="inputEmail4" name="content" rows="3" placeholder="在此填写内容"></textarea>
+            <textarea class="form-control"  id="myEditor" name="content" rows="3" placeholder="在此填写内容"></textarea>
         </div>
     </div>
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
           <div class="checkbox">
             <label>
-              <input type="checkbox" name="status" value="0"> 设为私密
+              <input type="checkbox" name="status" class="sm" value="0"> 设为私密
             </label>
           </div>
         </div>
