--- a/application/index/view/notice/edit.html
+++ b/application/index/view/notice/edit.html
@@ -14,19 +14,17 @@
         </div>
     </div>
     <div class="form-group">
-        <label for="content1" class="col-sm-2 control-label">内容</label>
+        <label for="myEditor" class="col-sm-2 control-label">内容</label>
         <div class="col-sm-10">
             <!--style给定宽度可以影响编辑器的最终宽度-->
-            <script type="text/plain" id="myEditor" style="width:1000px;height:240px;">
-                <textarea class="form-control" name="content" id="content1" rows="3">{$vo.content}</textarea>
-            </script>
+                <textarea class="form-control" name="content" id="myEditor" rows="3">{$vo.content}</textarea>
         </div>
     </div>
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
           <div class="checkbox">
             <label>
-              <input type="checkbox" name="status" value="0"> 设为私密
+              <input type="checkbox" name="status" class="sm" value="0"> 设为私密
             </label>
           </div>
         </div>
