--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -4,4 +4,38 @@
     <div class="jumbotron">
         <p class="small" style="font-size: 30px;">我是首页</p>
     </div>
+    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      	<img src="__STATIC__/img/1.jpg" alt="...">
+    </div>
+    <div class="item">
+      	<img src="__STATIC__/img/2.jpg" alt="...">
+    </div>
+    <div class="item">
+      	<img src="__STATIC__/img/3.jpg" alt="...">
+    </div>
+    <div class="item">
+      	<img src="__STATIC__/img/4.jpg" alt="...">
+    </div>
+  </div>
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 {/block}
