--- a/application/index/view/main.html
+++ b/application/index/view/main.html
@@ -87,9 +87,9 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">上传与下载<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="{:url('notice/index')}">文件详情</a></li>
-                            <li><a href="{:url('notice/index')}">上传</a></li>
-                            <li><a href="{:url('notice/add')}">下载</a></li>
+                            <li><a href="{:url('file/index')}">文件详情</a></li>
+                            <li><a href="{:url('file/upload')}">上传</a></li>
+                            <li><a href="{:url('notice/download')}">下载</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -182,7 +182,7 @@
     <!-- footer -->
     <nav class="navbar-default navbar-fixed-bottom text-center">
         <div class="yqlj">
-            友情链接：<a href="http://fontawesome.dashgame.com/" target="_block">Font Awesome</a> | <a href="http://bootcss.com" target="_block">Bootstrap</a> | <a href="http://thinkphp.cn" target="_block">thinkphp官网</a> | <a href="https://www.pexels.com/" target="_block">pexels高清图片</a>
+            友情链接：<a href="http://fontawesome.dashgame.com/" target="_blank">Font Awesome</a> | <a href="http://bootcss.com" target="_blank">Bootstrap</a> | <a href="http://thinkphp.cn" target="_blank">thinkphp官网</a> | <a href="https://www.pexels.com/" target="_blank">pexels高清图片</a> | <a href="https://www.kancloud.cn/phper123/tools/289760/" target="_blank">Thinkphp5工具箱</a>
         </div>
         All images and contents &copy; tarena
     </nav>
